tests/models/struct/unnamed/bool/fail/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1)]
    bool
);
fn main() {}
